# steamlug-7dfps-2013

./: .gitignore  README.posix_maptools
mp/game/mod_hl2mp/: gameinfo.txt
mp/game/mod_hl2mp/materials/console/: background.vmt  background.vtf
mp/game/mod_hl2mp/materials/logo/: logo.vmt  logo.vtf
mp/game/mod_hl2mp/resource/: ClientScheme.res  GameLogo.res
mp/game/mod_hl2mp/scripts/: ChapterBackgrounds.txt  weapon_lantern.txt
mp/src/: CMakeLists.txt
mp/src/game/client/: c_baseplayer.h  c_playerresource.cpp  client_hl2mp.vpc  hud_basechat.cpp  hud_basechat.h
mp/src/game/client/hl2mp/: c_hl2mp_player.cpp  c_hl2mp_player.h  hl2mp_hud_chat.cpp  hl2mp_hud_target_id.cpp  hl2mp_hud_team.cpp
mp/src/game/client/hl2mp/ui/: hl2mpclientscoreboard.cpp
mp/src/game/server/: items.h  player.h  server_hl2mp.vpc
mp/src/game/server/hl2/: item_ammo.cpp
mp/src/game/server/hl2mp/: hl2mp_bot_temp.cpp  hl2mp_client.cpp  hl2mp_player.cpp  hl2mp_player.h
mp/src/game/shared/: basecombatcharacter_shared.cpp
mp/src/game/shared/hl2mp/: hl2mp_gamerules.cpp  hl2mp_gamerules.h  weapon_lantern.cpp  weapon_lantern.h
mp/src/lib/: CMakeLists.txt
mp/src/lib/linux32/: CMakeLists.txt
mp/src/lib/public/linux32/: CMakeLists.txt
mp/src/utils/: CMakeLists.txt
mp/src/utils/vbsp/: CMakeLists.txt
mp/src/utils/vrad/: CMakeLists.txt
mp/src/utils/vvis/: CMakeLists.txt
res/sound/: readme.txt
res/source/models/weapons/: v_lantern.blend1  v_lantern.blend2
